--- a/skaffold.yml
+++ b/skaffold.yml
@@ -7,7 +7,7 @@ profiles:
         push: true # false는 로컬 테스트
       artifacts:
         # - image: jei0486/starter # on dev server (docker hub에 push하고 실행)
-        - image: 192.168.41.50:5000/api-auth
+        - image: http://192.168.41.50:5000/api-auth
           jib:
             args:
               - -DskipTests
