--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -6,10 +6,10 @@ server.port: 8080
 
 spring:
   datasource:
-    url: jdbc:postgresql://hanex-dev-database.cluster-coherc69qjmr.ap-northeast-2.rds.amazonaws.com:5432/hanexdb
+    url: jdbc:postgresql://192.168.41.50:5432/openmsadb
     driverClassName: org.postgresql.Driver
-    username: hanexuser
-    password: hanex1234!!
+    username: openmsauser
+    password: open1234!!
   redis:
     host: localhost
     port: 6001
