--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-aop' // aop
 	implementation "org.springframework.cloud:spring-cloud-starter-openfeign:3.1.8"  // OpenFeign
 	implementation 'com.google.guava:guava:31.1-jre'
-	
+
+	implementation 'org.apache.logging.log4j:2.14.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
